[package]
name = "hb-wasm-filter"
version = "0.1.0"
authors = ["Hector Bulgarini <hbulgarini@gmail.com>"]
description = "A test project with wasm-pack"
license = "MIT/Apache-2.0"
repository = ""
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.33"
regex = "1"